10. Added help to Get-IPrange and also changed some of the formating.
11. Updated Get-SysInternals with various methods to download and error checking.
12. Added Import-WSToolsConfig as an alias on Get-WSToolsConfig. Also added alias WSToolsConfig on Get-WSToolsConfig.
13. Updated help on Install-WSTools and also changed it to use the UpdatePath config setting.

Removed items:
1. Get-202001UpdateStatus: We are in August 2020 now so if computers don't newer cumulative updates there is a problem.
2. Get-DNSInfo: Not functioning and redundant.
3. Removed Import-WSToolsConfig function.

######################
#                    #
#      v1.2.2        #
#                    #
######################
Known issues:
1. Get-OperatingSystem displays computers as 32-bit when running the command against a computer the logged in user does not have admin rights on.

Bug fixes:
1. Fixed issue with Install-Patches using an incorrect file path.
2. Changed the InstallRemote.ps1 Windows and Office cab file install so that it doesn't automatically restart computers.

New features and other changes:
1. Added Save-UpdateHistory.
2. Added Save-MaintenanceReport.
3. Added $UHpath to config file for setting path on Save-UpdateHistory and Save-MaintenanceReport. Bumped config file to version 1.0.3.
4. Added compatability for Windows 10 v2004 (Build 19041 May 2020 release) to Get-OperatingSystem.
5. Added Ignore list to config file.
6. Added AppRepo to config file.
7. Changed Get-UpTime to also show total hours up, days, hours, minutes, and seconds.

######################
#                    #
#      v1.2.1        #
#                    #
######################
Known issues:
1. Get-OperatingSystem displays computers as 32-bit when running the command against a computer the logged in user does not have admin rights on.

Bug fixes:
1. Cleared a lot of issues relating to syntax of commands, $null syntax, as well as the way variables are cleared in some functions.